Tue, 02 Aug 2022 18:37:21 -0600 v1.6.1

- Fix 'bullseye' name determination - remove extra sources output

Thu, 02 Dec 2021 16:36:15 -0600 v1.6.0

- Merged 4 pull requests:
  - Adjusted GetLastUpdateDate() to work on Arch Linux (#32)
  - Added Arch Linux specific additional install info to README (#33)
  - Adjusted reported temp units to °C from C (#35)
  - Change min interval to 1 min., Fixed cpu load reporting, Added new sensor (#39)
- Cleaned up README and added thankyou to github members who have contributed

Sun, 13 Jun 2021 21:13:32 -0600 v1.5.5

- BUGFIX allow special characters to be used in config.ini (#30)
- NEW add CPU Usage reports (#23)
- Add alternate install location assistance to README (#17)

Sat Aug 29 17:50:42 2020 -0600 v1.5.4

- CPU throttle state reporting (#15)

Wed Aug 19 12:33:14 2020 -0600 v1.5.3

- BUGFIX: fixed broken Network IF parser when only one interface (think pizero)

Tue Aug 18 23:24:06 2020 -0600 v1.5.2

- Adjust hardware IF filter again... let's please see wlan0 and eth0 I/Fs

Mon Aug 17 15:51:07 2020 -0600

- Adjust update mech to use update-check dates, too

Mon Aug 17 19:46:44 2020 -0600 v1.5.1

- Filter ignoring HA network devices was incomplete - fixed
- Possibly breaking change (UniqueID may change for some users)

Mon Aug 17 01:26:21 2020 -0600 v1.5.0

- Added Memory Reporting
- Added CPU Reporting
- Removed reporting of non-hardware net devices (Hassio, Docker, etc.)
- Possibly breaking change (UniqueID may change for some users)

Sat Aug 15 03:25:26 2020 -0600 v1.4.4

- Fix log file grep (for some systems)
     Add option for grep to treat  dpkg log files a text (#8)
     README: show new drives entry in MQTT payload

Tue Aug 11 18:42:34 2020 -0600 v1.4.3

- Add alternate locn for vcgen* cmd, use alternate drive space parser

Sun Aug 9 18:25:57 2020 -0600 v1.4.2

- Adjust retry timer for systemd service
- Update README, adjust systemd script to start at later time

Wed Aug 5 12:41:34 2020 -0600 v1.4.1
